Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27179

QtMultimedia module fails to build with Clang in 32-bit

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.0.0 Beta 1
    • 5.0.0 Beta 1, 5.0.0 RC 1, 5.0.0
    • Multimedia
    • None
    • OS X 10.7.4, MacPorts Clang 3.1
    • 8907cecc0dbe72deec3273f4800008b005c90544

      When building Qt 5 with Clang 3.1 using macx-clang-libc++-32, QtMultimedia fails to build with the following errors:

      clang -c -pipe -mmacosx-version-min=10.6 -arch i386 -stdlib=libc++ -g -gdwarf-2 -std=c++11 -fvisibility=hidden -fvisibility-inlines-hidden -Wall -W -DQT_NO_LIBUDEV -DQT_NO_EVDEV -DQT_NO_XCB -DQMEDIA_QT7_PLAYER -DQT_NO_KEYWORDS -DQT_PLUGIN -DQT_MULTIMEDIAWIDGETS_LIB -DQT_OPENGL_LIB -DQT_MULTIMEDIA_LIB -DQT_WIDGETS_LIB -DQT_NETWORK_LIB -DQT_GUI_LIB -DQT_CORE_LIB -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/Qt/5.0/qtbase/mkspecs/macx-clang-libc++-32 -I. -Imediaplayer -I/Qt/5.0/qtbase/include -I/Qt/5.0/qtbase/include/QtMultimediaWidgets -I/Qt/5.0/qtbase/include/QtMultimediaWidgets/5.0.0 -I/Qt/5.0/qtbase/include/QtMultimediaWidgets/5.0.0/QtMultimediaWidgets -I/Qt/5.0/qtbase/include/QtOpenGL -I/Qt/5.0/qtbase/include/QtMultimedia -I/Qt/5.0/qtbase/include/QtMultimedia/5.0.0 -I/Qt/5.0/qtbase/include/QtMultimedia/5.0.0/QtMultimedia -I/Qt/5.0/qtbase/include/QtWidgets -I/Qt/5.0/qtbase/include/QtNetwork -I/Qt/5.0/qtbase/include/QtGui -I/Qt/5.0/qtbase/include/QtCore -I.moc/debug-shared -I/System/Library/Frameworks/OpenGL.framework/Versions/A/Headers -I/System/Library/Frameworks/AGL.framework/Headers -F/Qt/5.0/qtbase/lib mediaplayer/qt7playersession.mm -o .obj/debug-shared/qt7playersession.o
      qt7movierenderer.mm:342:57: error: incomplete type 'QGLContext' named in nested name specifier
                  (m_usingGLContext && (m_currentGLContext != QGLContext::currentContext())) ||
                                                              ^~~~~~~~~~~~
      /Qt/5.0/qtbase/include/QtWidgets/../../src/widgets/kernel/qwidget.h:695:18: note: forward
            declaration of 'QGLContext'
          friend class QGLContext;
                       ^
      qt7movierenderer.mm:356:38: error: incomplete type 'QGLContext' named in nested name specifier
                      m_currentGLContext = QGLContext::currentContext();
                                           ^~~~~~~~~~~~
      /Qt/5.0/qtbase/include/QtWidgets/../../src/widgets/kernel/qwidget.h:695:18: note: forward
            declaration of 'QGLContext'
          friend class QGLContext;
                       ^
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            janichol Andy Nichols
            stephenju Stephen Chu
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes