Fix for QuickTime 7 media player backend

Fix build on Mac 10.6 (32bits)

Task-number: QTBUG-27179

Change-Id: If0b83605650966bf801b5fbb06d02c113d0b4214
Reviewed-by: Andy Nichols <andy.nichols@digia.com>